[package]
name = "gateway-protocols"
version = "0.1.0"
edition = "2021"

[dependencies]
http = "1.1.0"
bytes = "1.7.1"
log = "0.4.22"
tokio = { version = "1", feature = ["io", "io-util"]}
gateway-basic = { version = "0.1.0", path = "../gateway-basic" }
gateway-error = { version = "0.1.0", path = "../gateway-error" }